--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Pixel Art Maker!</title>
@@ -15,8 +15,8 @@
     <h2 class="grid">Choose Grid Size</h2>
     <form id="sizePicker">
         Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" value="1"> Grid Width:
-        <input type="number" id="inputWeight" name="width" min="1" value="1">
+        <input type="number" id="inputHeight" name="height" min="1" max="1000" value="1"> Grid Width:
+        <input type="number" id="inputWeight" name="width" min="1" max="1000" value="1">
         <input type="submit" id="submit_button">
     </form>
 
