--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Pixel Art Maker!</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
+    <link href="https://fonts.googleapis.com/css?family=Exo:400,900" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -12,19 +12,20 @@
 <body>
     <h1>Lab: Pixel Art Maker</h1>
 
-    <h2 class="grid">Choose Grid Size</h2>
     <form id="sizePicker">
-        Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" max="1000" value="1"> Grid Width:
+        <h2 class="grid">Choose Grid Size</h2>
+        <label for="inputHeight">Height:</label>
+        <input type="number" id="inputHeight" name="height" min="1" max="1000" value="1">
+        <label for="inputWeight">Grid Width:</label>
         <input type="number" id="inputWeight" name="width" min="1" max="1000" value="1">
         <input type="submit" id="submit_button">
     </form>
-
-    <h2>Pick A Color</h2>
-    <input type="color" id="colorPicker">
-
-    <h2>Design Canvas</h2>
-    <table id="pixel_canvas"></table>
+    <div class="canvas-holder">
+        <h2>Pick A Color</h2>
+        <input type="color" id="colorPicker">
+        <h2>Design Canvas</h2>
+        <table id="pixel_canvas"></table>
+    </div>
 
     <script src="designs.js"></script>
 </body>
