--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
     <h1>Lab: Pixel Art Maker</h1>
 
-    <form id="sizePicker">
+    <form id="size-Picker">
         <h2 class="grid">Choose Grid Size</h2>
         <label for="inputHeight">Height:</label>
-        <input type="number" id="inputHeight" name="height" min="1" max="1000" value="1">
-        <label for="inputWeight">Grid Width:</label>
-        <input type="number" id="inputWeight" name="width" min="1" max="1000" value="1">
-        <input type="submit" id="submit_button">
+        <input type="number" id="inputHeight" name="height" min="1" value="1">
+        <label for="inputWidth">Grid Width:</label>
+        <input type="number" id="inputWidth" name="width" min="1" value="1">
+        <input type="submit" id="submit-button">
     </form>
     <div class="canvas-holder">
         <h2>Pick A Color</h2>
-        <input type="color" id="colorPicker">
+        <input type="color" id="color-Picker">
         <h2>Design Canvas</h2>
         <table id="pixel_canvas"></table>
     </div>
